objects/ChatResponseAction__c.object
<CustomObject>
    <fields>
        <fullName>ChatResponse__c</fullName>
        <label>Chat Response</label>
        <referenceTo>ChatResponse__c</referenceTo>
        <relationshipLabel>Chat Response Actions</relationshipLabel>
        <relationshipName>Chat_Response_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IconName__c</fullName>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chat Response Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Response Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>